# png_to_webp

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  justfile  package-lock.json  package.json  png-to-webp.code-workspace
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: errors.rs  handlers.rs  main.rs  models.rs  services.rs
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/mp4-to-webm/: page.tsx
frontend/src/components/: CompressionSettings.tsx  Header.tsx  HealthCheck.tsx  ImageConverter.tsx  Navigation.tsx  VideoConverter.tsx
frontend/src/hooks/: use-conversion-history.ts  use-file-upload.ts
frontend/src/lib/: api.ts  types.ts
scripts/: debug-network.sh  install-just.sh  setup-dev.sh  start-backend.sh  start-dev.sh  start-frontend.sh
